--- a/index.html
+++ b/index.html
@@ -79,9 +79,31 @@
                 </div>
     </section>
 
-    <section class="section-test">
-        <div class="row">
-            <h1>Hei</h1>
+    <section class="section-foods">
+        <div class="foods">
+            <ul>
+                <li class="img-big">
+                    <figure class="food-img">
+                        <img src="food1.png"/></li>
+                    </figure>
+                <li class="img-small">
+                    <figure class="food-img">
+                        <img src="food2.png"/></li>
+                    </figure>
+                </li>
+            </ul>
+            <ul class="row2">
+                <li class="img-small">
+                    <figure class="food-img">
+                        <img src="food3.png"/></li>
+                    </figure>
+                </li>
+                <li class="img-big">
+                    <figure class="food-img">
+                        <img src="food4.png"/></li>
+                    </figure>
+                </li>
+            </ul>
         </div>
     </section>
         
