--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
             <h1>Norwegian cities</h1>
         <div class="towns">
             <div class="town1 boxTown">
+                <img src="Oslo.jpg" alt="">
                 <p>Oslo</p>
             </div>
         
